# audit-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
app/adapters/analyzer/: replay.py  security_lab.py
app/adapters/embedder/: ollama_embed.py
app/adapters/llm/: anthropic.py  factory.py  ollama.py  router.py
app/adapters/vectorstore/: factory.py  pgvector_store.py  qdrant_store.py
app/agent/: __init__.py  auditor.py  synthesize.py
app/api/: __init__.py  app.py  dependencies.py  errors.py  routes.py  schemas.py
app/domain/: audit.py  llm.py  models.py  ports.py  rag.py
app/eval/: __init__.py  corpus.py  harness.py  judge.py  metrics.py  report.py  retrieval.py  retrieval_gold.py
app/observability/: budget.py
app/rag/: chunk.py  classify.py  embedding_classifier.py  ingest.py  rerank.py  retrieve.py
app/rag/corpus/: access-control.md  bridge-messaging.md  precision-loss.md  price-oracle.md  reentrancy.md  reward-accounting.md  signature-replay.md  supply-integrity.md  vault-inflation.md
examples/: VulnerableVault.sol
scripts/: demo_analyze.py  demo_audit.py  demo_eval.py  demo_llm.py  demo_rag.py  record_findings.py
tests/integration/: test_api_live.py  test_auditor_live.py  test_embed_live.py  test_eval_corpus_live.py  test_ollama_live.py  test_pgvector.py  test_qdrant.py  test_recon_bridge.py  test_retrieval_quality_live.py
tests/unit/: test_anthropic_provider.py  test_api_health.py  test_api_routes.py  test_auditor.py  test_budget.py  test_bundled_ingest.py  test_chunk.py  test_classify.py  test_embedding_classifier.py  test_eval_corpus.py  test_eval_harness.py  test_eval_judge.py  test_eval_metrics.py  test_factory.py  test_fixture_integrity.py  test_hybrid.py  test_ollama_embedder.py  test_ollama_provider.py  test_pgvector_config.py  test_recall_gate.py  test_replay_analyzer.py  test_rerank.py  test_retrieval_metrics.py  test_retrieve.py  test_router.py  test_security_lab_adapter.py  test_synthesize.py  test_vectorstore_factory.py
(+70 files in other folders)
