[project]
name = "audit-copilot"
version = "0.1.0"
description = "AI-копилот аудита смарт-контрактов: детекторы security-lab + RAG + агент-аудитор с измеримым качеством"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: тесты, которым нужен реальный движок security-lab на диске",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
